--- a/vhr/src/main/resources/application.properties
+++ b/vhr/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
+spring.datasource.username=vhr
+spring.datasource.password=vhr
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/vhr?useUnicode=true&characterEncoding=UTF-8
