--- a/vhr/src/main/resources/application.properties
+++ b/vhr/src/main/resources/application.properties
@@ -4,3 +4,6 @@ spring.datasource.password=vhr
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/vhr?useUnicode=true&characterEncoding=UTF-8
 
 server.port=8081
+
+# \u6253\u5370\u6267\u884C\u7684 sql \u8BED\u53E5
+logging.level.com.ibgdn.vhr.mapper=debug
