--- a/vhr/mailserver/src/main/resources/application.properties
+++ b/vhr/mailserver/src/main/resources/application.properties
@@ -3,13 +3,13 @@ server.port=8082
 spring.mail.host=smtp.qq.com
 spring.mail.protocol=smtp
 spring.mail.default-encoding=UTF-8
-spring.mail.password=\u5BC6\u7801
-spring.mail.username=\u53D1\u4EF6\u4EBA\u5730\u5740
+spring.mail.password=qfexufpognlxbjbg
+spring.mail.username=491780880@qq.com
 spring.mail.port=587
 spring.mail.properties.mail.stmp.socketFactory.class=javax.net.ssl.SSLSocketFactory
 spring.mail.properties.mail.debug=true
 
-spring.rabbitmq.host=192.168.1.101
+spring.rabbitmq.host=192.168.1.108
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
