--- a/vhr/vhrserver/vhr-service/pom.xml
+++ b/vhr/vhrserver/vhr-service/pom.xml
@@ -22,6 +22,10 @@
             <artifactId>poi</artifactId>
             <version>4.1.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-amqp</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
