--- a/vhr/vhrserver/vhr-web/src/main/resources/application.properties
+++ b/vhr/vhrserver/vhr-web/src/main/resources/application.properties
@@ -7,3 +7,8 @@ server.port=8081
 
 # \u6253\u5370\u6267\u884C\u7684 sql \u8BED\u53E5
 logging.level.com.ibgdn.vhr.mapper=debug
+
+spring.rabbitmq.host=192.168.1.108
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
