--- a/vhr/vhrserver/vhr-web/src/main/resources/application.properties
+++ b/vhr/vhrserver/vhr-web/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.username=vhr
 spring.datasource.password=vhr
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/vhr?useUnicode=true&characterEncoding=UTF-8
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/vhr?useUnicode=true&characterEncoding=UTF-8&&serverTimeZone=Asia/Shanghai
 
 server.port=8081
 
